{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 16,
  "lineage": "d0ef106f-2924-6dc5-aeeb-545e18d494f6",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-sreyas-projects-public",
            "location": "eastus",
            "name": "nsg-sreyas-projects-public",
            "resource_group_name": "rg-sreyas-projects",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS-Restricted",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "136.226.78.0/24",
                  "170.85.154.0/24",
                  "172.126.69.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Restricted",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "136.226.78.0/24",
                  "170.85.154.0/24",
                  "172.126.69.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "App": "Sreyas Home Page",
              "Environment": "Development",
              "Owner": "DevOps Team",
              "Project": "Azure VPC Setup"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/virtualNetworks/vnet-sreyas-projects/subnets/subnet-sreyas-projects-public",
            "name": "subnet-sreyas-projects-public",
            "network_security_group_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-sreyas-projects-public",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sreyas-projects",
            "virtual_network_name": "vnet-sreyas-projects"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "689076aa-e76c-4d8e-b043-6ace38d5cc51",
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/virtualNetworks/vnet-sreyas-projects",
            "location": "eastus",
            "name": "vnet-sreyas-projects",
            "resource_group_name": "rg-sreyas-projects",
            "subnets": [
              "subnet-sreyas-projects-private",
              "subnet-sreyas-projects-public"
            ],
            "tags": {
              "App": "Sreyas Home Page",
              "Environment": "Development",
              "Owner": "DevOps Team",
              "Project": "Azure VPC Setup"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "toyshare_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkInterfaces/nic-toyshare-vm",
            "internal_domain_name_suffix": "vj1ja0dm24he1mcdnlhdrvomkb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipcfg-toyshare",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/publicIPAddresses/pip-toyshare-vm",
                "subnet_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/virtualNetworks/vnet-sreyas-projects/subnets/subnet-sreyas-projects-public"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-FE-91-62",
            "name": "nic-toyshare-vm",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-sreyas-projects",
            "tags": {
              "Environment": "Development",
              "Owner": "DevOps Team",
              "Project": "ToyShare",
              "Purpose": "Node.js file sharing application"
            },
            "virtual_machine_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Compute/virtualMachines/toysharevm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.toyshare_vm_pip",
            "data.azurerm_resource_group.existing",
            "data.azurerm_subnet.public",
            "data.azurerm_virtual_network.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "toyshare_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkInterfaces/nic-toyshare-vm|/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-toyshare-vm",
            "network_interface_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkInterfaces/nic-toyshare-vm",
            "network_security_group_id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-toyshare-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.toyshare_vm_nic",
            "azurerm_network_security_group.toyshare_nsg",
            "azurerm_public_ip.toyshare_vm_pip",
            "data.azurerm_resource_group.existing",
            "data.azurerm_subnet.public",
            "data.azurerm_virtual_network.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "toyshare_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-toyshare-vm",
            "location": "eastus",
            "name": "nsg-toyshare-vm",
            "resource_group_name": "rg-sreyas-projects",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-Outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Restricted",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "170.85.154.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NodeJS-Restricted",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS-Public",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP-Public",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Development",
              "Owner": "DevOps Team",
              "Project": "ToyShare",
              "Purpose": "Node.js file sharing application"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodejs_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/networkSecurityGroups/nsg-sreyas-projects-public/securityRules/NodeJS-Public",
            "name": "NodeJS-Public",
            "network_security_group_name": "nsg-sreyas-projects-public",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "rg-sreyas-projects",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_network_security_group.public",
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "toyshare_vm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "toyshare-vm",
            "fqdn": "toyshare-vm.eastus.cloudapp.azure.com",
            "id": "/subscriptions/516c683e-d8f1-429f-8977-56e975fd6c10/resourceGroups/rg-sreyas-projects/providers/Microsoft.Network/publicIPAddresses/pip-toyshare-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.51.196.218",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-toyshare-vm",
            "resource_group_name": "rg-sreyas-projects",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Development",
              "Owner": "DevOps Team",
              "Project": "ToyShare",
              "Purpose": "Node.js file sharing application"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    }
  ]
}